--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-web-share": "^2.0.2",
     "vite-plugin-react": "^4.0.1"
   },
   "devDependencies": {
