--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-share": "^4.4.1",
+    "react-tooltip": "^4.4.3",
     "react-web-share": "^2.0.2",
     "vite-plugin-react": "^4.0.1"
   },
