--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.11",
     "@popperjs/core": "^2.11.6",
     "react": "^18.2.0",
