--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@popperjs/core": "^2.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-popper": "^2.3.0",
     "react-share": "^4.4.1",
     "react-tooltip": "^4.4.3",
