--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3",
     "react-share": "^4.4.1",
     "react-web-share": "^2.0.2",
     "vite-plugin-react": "^4.0.1"
